src/antrl4-lang-grammar/CustomColumnExpressionsParser.ts
// Generated from ./src/antrl4-lang-grammar/CustomColumnExpressions.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CustomColumnExpressionsListener } from "./CustomColumnExpressionsListener";
import { CustomColumnExpressionsVisitor } from "./CustomColumnExpressionsVisitor";


export class CustomColumnExpressionsParser extends Parser {
	public static readonly ASTERISK = 1;
	public static readonly SLASH = 2;
	public static readonly PLUS = 3;
	public static readonly MINUS = 4;
	public static readonly EQUAL = 5;
	public static readonly NOT_EQUAL = 6;
	public static readonly GREATER_THAN = 7;
	public static readonly LESS_THAN = 8;
	public static readonly GREATER_OR_EQUAL = 9;
	public static readonly LESS_OR_EQUAL = 10;
	public static readonly CIRCUMFLEX = 11;
	public static readonly CONCAT = 12;
	public static readonly TRIM = 13;
	public static readonly LEN = 14;
	public static readonly TO_STRING = 15;
	public static readonly LOWER = 16;
	public static readonly UPPER = 17;
	public static readonly LEFT = 18;
	public static readonly RIGHT = 19;
	public static readonly MID = 20;
	public static readonly SUBSTITUTE = 21;
	public static readonly REPLACE = 22;
	public static readonly MOD = 23;
	public static readonly ABS = 24;
	public static readonly DATE_DIFF = 25;
	public static readonly TO_NUMERIC = 26;
	public static readonly DAY = 27;
	public static readonly WEEK = 28;
	public static readonly WEEKDAY = 29;
	public static readonly MONTH = 30;
	public static readonly YEAR = 31;
	public static readonly HOUR = 32;
	public static readonly MINUTE = 33;
	public static readonly FIND = 34;
	public static readonly AND = 35;
	public static readonly OR = 36;
	public static readonly XOR = 37;
	public static readonly NOT = 38;
	public static readonly EXACT = 39;
	public static readonly TO_BOOL = 40;
	public static readonly NOW = 41;
	public static readonly TO_DATE = 42;
	public static readonly IF = 43;
	public static readonly BOOLEAN_VALUE = 44;
	public static readonly DATE_FORMAT = 45;
	public static readonly DATE_VALUE = 46;
	public static readonly NUMERIC_VALUE = 47;
	public static readonly COLUMN_NAME = 48;
	public static readonly STRING_VALUE = 49;
	public static readonly LPAREN = 50;
	public static readonly RPAREN = 51;
	public static readonly COMMA = 52;
	public static readonly WHITESPACE = 53;
	public static readonly ANY = 54;
	public static readonly RULE_objectExpression = 0;
	public static readonly RULE_numericExpression = 1;
	public static readonly RULE_booleanExpression = 2;
	public static readonly RULE_dateExpression = 3;
	public static readonly RULE_stringExpression = 4;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"objectExpression", "numericExpression", "booleanExpression", "dateExpression", 
		"stringExpression",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'*'", "'/'", "'+'", "'-'", "'='", "'<>'", "'>'", "'<'", "'>='", 
		"'<='", "'^'", undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "'('", "')'", "','",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "ASTERISK", "SLASH", "PLUS", "MINUS", "EQUAL", "NOT_EQUAL", 
		"GREATER_THAN", "LESS_THAN", "GREATER_OR_EQUAL", "LESS_OR_EQUAL", "CIRCUMFLEX", 
		"CONCAT", "TRIM", "LEN", "TO_STRING", "LOWER", "UPPER", "LEFT", "RIGHT", 
		"MID", "SUBSTITUTE", "REPLACE", "MOD", "ABS", "DATE_DIFF", "TO_NUMERIC", 
		"DAY", "WEEK", "WEEKDAY", "MONTH", "YEAR", "HOUR", "MINUTE", "FIND", "AND", 
		"OR", "XOR", "NOT", "EXACT", "TO_BOOL", "NOW", "TO_DATE", "IF", "BOOLEAN_VALUE", 
		"DATE_FORMAT", "DATE_VALUE", "NUMERIC_VALUE", "COLUMN_NAME", "STRING_VALUE", 
		"LPAREN", "RPAREN", "COMMA", "WHITESPACE", "ANY",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CustomColumnExpressionsParser._LITERAL_NAMES, CustomColumnExpressionsParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CustomColumnExpressionsParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "CustomColumnExpressions.g4"; }

	// @Override
	public get ruleNames(): string[] { return CustomColumnExpressionsParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CustomColumnExpressionsParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CustomColumnExpressionsParser._ATN, this);
	}
	// @RuleVersion(0)
	public objectExpression(): ObjectExpressionContext {
		let _localctx: ObjectExpressionContext = new ObjectExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CustomColumnExpressionsParser.RULE_objectExpression);
		try {
			this.state = 15;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				_localctx = new ColumnNameContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 10;
				this.match(CustomColumnExpressionsParser.COLUMN_NAME);
				}
				break;

			case 2:
				_localctx = new BooleanExpContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 11;
				this.booleanExpression();
				}
				break;

			case 3:
				_localctx = new NumericExpContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 12;
				this.numericExpression(0);
				}
				break;

			case 4:
				_localctx = new DateExpContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 13;
				this.dateExpression();
				}
				break;

			case 5:
				_localctx = new StringExpContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 14;
				this.stringExpression();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public numericExpression(): NumericExpressionContext;
	public numericExpression(_p: number): NumericExpressionContext;
	// @RuleVersion(0)
	public numericExpression(_p?: number): NumericExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: NumericExpressionContext = new NumericExpressionContext(this._ctx, _parentState);
		let _prevctx: NumericExpressionContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, CustomColumnExpressionsParser.RULE_numericExpression, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CustomColumnExpressionsParser.LPAREN:
				{
				_localctx = new NumericParenthesisContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 18;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 19;
				this.numericExpression(0);
				this.state = 20;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.TO_NUMERIC:
				{
				_localctx = new ToNumericFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 22;
				this.match(CustomColumnExpressionsParser.TO_NUMERIC);
				this.state = 23;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 24;
				(_localctx as ToNumericFunctionContext)._string = this.stringExpression();
				this.state = 27;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CustomColumnExpressionsParser.COMMA) {
					{
					this.state = 25;
					this.match(CustomColumnExpressionsParser.COMMA);
					this.state = 26;
					(_localctx as ToNumericFunctionContext)._scale = this.numericExpression(0);
					}
				}

				this.state = 29;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.MOD:
				{
				_localctx = new ModFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 31;
				this.match(CustomColumnExpressionsParser.MOD);
				this.state = 32;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 33;
				(_localctx as ModFunctionContext)._dividend = this.numericExpression(0);
				this.state = 34;
				this.match(CustomColumnExpressionsParser.COMMA);
				this.state = 35;
				(_localctx as ModFunctionContext)._divisor = this.numericExpression(0);
				this.state = 36;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.ABS:
				{
				_localctx = new AbsFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 38;
				this.match(CustomColumnExpressionsParser.ABS);
				this.state = 39;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 40;
				(_localctx as AbsFunctionContext)._number = this.numericExpression(0);
				this.state = 41;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.LEN:
				{
				_localctx = new LenghtFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 43;
				this.match(CustomColumnExpressionsParser.LEN);
				this.state = 44;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 45;
				(_localctx as LenghtFunctionContext)._string = this.stringExpression();
				this.state = 46;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.FIND:
				{
				_localctx = new FindFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 48;
				this.match(CustomColumnExpressionsParser.FIND);
				this.state = 49;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 50;
				(_localctx as FindFunctionContext)._findText = this.stringExpression();
				this.state = 51;
				this.match(CustomColumnExpressionsParser.COMMA);
				this.state = 52;
				(_localctx as FindFunctionContext)._withinText = this.stringExpression();
				this.state = 55;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CustomColumnExpressionsParser.COMMA) {
					{
					this.state = 53;
					this.match(CustomColumnExpressionsParser.COMMA);
					this.state = 54;
					(_localctx as FindFunctionContext)._startNum = this.numericExpression(0);
					}
				}

				this.state = 57;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.DAY:
				{
				_localctx = new DayFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 59;
				this.match(CustomColumnExpressionsParser.DAY);
				this.state = 60;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 61;
				(_localctx as DayFunctionContext)._date = this.dateExpression();
				this.state = 62;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.WEEK:
				{
				_localctx = new WeekFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 64;
				this.match(CustomColumnExpressionsParser.WEEK);
				this.state = 65;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 66;
				(_localctx as WeekFunctionContext)._date = this.dateExpression();
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CustomColumnExpressionsParser.COMMA) {
					{
					this.state = 67;
					this.match(CustomColumnExpressionsParser.COMMA);
					this.state = 68;
					(_localctx as WeekFunctionContext)._returnType = this.numericExpression(0);
					}
				}

				this.state = 71;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.WEEKDAY:
				{
				_localctx = new WeekDayFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 73;
				this.match(CustomColumnExpressionsParser.WEEKDAY);
				this.state = 74;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 75;
				(_localctx as WeekDayFunctionContext)._date = this.dateExpression();
				this.state = 78;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CustomColumnExpressionsParser.COMMA) {
					{
					this.state = 76;
					this.match(CustomColumnExpressionsParser.COMMA);
					this.state = 77;
					(_localctx as WeekDayFunctionContext)._returnType = this.numericExpression(0);
					}
				}

				this.state = 80;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.MONTH:
				{
				_localctx = new MonthFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 82;
				this.match(CustomColumnExpressionsParser.MONTH);
				this.state = 83;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 84;
				(_localctx as MonthFunctionContext)._date = this.dateExpression();
				this.state = 85;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.YEAR:
				{
				_localctx = new YearFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 87;
				this.match(CustomColumnExpressionsParser.YEAR);
				this.state = 88;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 89;
				(_localctx as YearFunctionContext)._date = this.dateExpression();
				this.state = 90;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.HOUR:
				{
				_localctx = new HourFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 92;
				this.match(CustomColumnExpressionsParser.HOUR);
				this.state = 93;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 94;
				(_localctx as HourFunctionContext)._date = this.dateExpression();
				this.state = 95;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.MINUTE:
				{
				_localctx = new MinuteFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 97;
				this.match(CustomColumnExpressionsParser.MINUTE);
				this.state = 98;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 99;
				(_localctx as MinuteFunctionContext)._date = this.dateExpression();
				this.state = 100;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.DATE_DIFF:
				{
				_localctx = new DateDiffFunctionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 102;
				this.match(CustomColumnExpressionsParser.DATE_DIFF);
				this.state = 103;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 104;
				(_localctx as DateDiffFunctionContext)._startDate = this.dateExpression();
				this.state = 105;
				this.match(CustomColumnExpressionsParser.COMMA);
				this.state = 106;
				(_localctx as DateDiffFunctionContext)._endDate = this.dateExpression();
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CustomColumnExpressionsParser.COMMA) {
					{
					this.state = 107;
					this.match(CustomColumnExpressionsParser.COMMA);
					this.state = 108;
					(_localctx as DateDiffFunctionContext)._unit = this.stringExpression();
					}
				}

				this.state = 111;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.IF:
				{
				_localctx = new NumericConditionExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 113;
				this.match(CustomColumnExpressionsParser.IF);
				this.state = 114;
				this.match(CustomColumnExpressionsParser.LPAREN);
				this.state = 115;
				(_localctx as NumericConditionExpContext)._condition = this.booleanExpression();
				this.state = 116;
				this.match(CustomColumnExpressionsParser.COMMA);
				this.state = 117;
				(_localctx as NumericConditionExpContext)._thenSection = this.numericExpression(0);
				this.state = 118;
				this.match(CustomColumnExpressionsParser.COMMA);
				this.state = 119;
				(_localctx as NumericConditionExpContext)._elseSection = this.numericExpression(0);
				this.state = 120;
				this.match(CustomColumnExpressionsParser.RPAREN);
				}
				break;
			case CustomColumnExpressionsParser.MINUS:
			case CustomColumnExpressionsParser.NUMERIC_VALUE:
				{
				_localctx = new NumericValueContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CustomColumnExpressionsParser.MINUS) {
					{
					this.state = 122;
					(_localctx as NumericValueContext)._minus = this.match(CustomColumnExpressionsParser.MINUS);
					}
				}

				this.state = 125;
				(_localctx as NumericValueContext)._value = this.match(CustomColumnExpressionsParser.NUMERIC_VALUE);
				}
				break;
			case CustomColumnExpressionsParser.COLUMN_NAME:
				{
				_localctx = new NumericColumnNameContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 126;
				this.match(CustomColumnExpressionsParser.COLUMN_NAME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 146;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 144;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
					case 1:
						{
						_localctx = new PowerExpContext(new NumericExpressionContext(_parentctx, _parentState));
						(_localctx as PowerExpContext)._number = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CustomColumnExpressionsParser.RULE_numericExpression);
						this.state = 129;
						if (!(this.precpred(this._ctx, 21))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 21)");
						}
						this.state = 130;
						this.match(CustomColumnExpressionsParser.CIRCUMFLEX);
						this.state = 131;
						(_localctx as PowerExpContext)._exponent = this.numericExpression(21);
						}
						break;

					case 2:
						{
						_localctx = new MultiplyExpContext(new NumericExpressionContext(_parentctx, _parentState));
						(_localctx as MultiplyExpContext)._multiplier = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CustomColumnExpressionsParser.RULE_numericExpression);
						this.state = 132;
						if (!(this.precpred(this._ctx, 20))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 20)");
						}
						this.state = 133;
						this.match(CustomColumnExpressionsParser.ASTERISK);
						this.state = 134;
						(_localctx as MultiplyExpContext)._multiplicand = this.numericExpression(21);
						}
						break;

					case 3:
						{
						_localctx = new DivisionExpContext(new NumericExpressionContext(_parentctx, _parentState));
						(_localctx as DivisionExpContext)._dividend = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CustomColumnExpressionsParser.RULE_numericExpression);
						this.state = 135;
						if (!(this.precpred(this._ctx, 19))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 19)");
						}
						this.state = 136;
						this.match(CustomColumnExpressionsParser.SLASH);
						this.state = 137;
						(_localctx as DivisionExpContext)._divisor = this.numericExpression(20);
						}
						break;

					case 4:
						{
						_localctx = new AdditionExpContext(new NumericExpressionContext(_parentctx, _parentState));
						(_localctx as AdditionExpContext)._augent = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, CustomColumnExpressionsParser.RULE_numericExpression);
						this.state = 138;
						if (!(this.precpred(this._ctx, 18))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 18)");
						}
						this.state = 139;
						this.match(CustomColumnExpressionsParser.PLUS);
						this.state = 140;
						(_localctx as AdditionExpContext)._addent = this.numericExpression(19);
						}
						break;

					case 5:
						{
